--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,12 @@ undergarden_version=0.8.22
 mod_id=undergarden
 
 # Minecraft
-minecraft_version=1.21.1
+minecraft_version=1.21.3
 
 # NeoForge
-neo_version=21.1.64
+neo_version=21.3.5-beta
 
 # Deps
 jei_version=19.8.2.99
-jade_version=5639932
+jade_version=5835088
 better_advancements_version=5511371
