--- a/build.gradle
+++ b/build.gradle
@@ -99,14 +99,12 @@ repositories {
 }
 
 dependencies {
-	// compile against the JEI API but do not include it at runtime
-	compileOnly("mezz.jei:jei-1.21-common-api:${jei_version}")
-	compileOnly("mezz.jei:jei-1.21-neoforge-api:${jei_version}")
-	// at runtime, use the full JEI jar for NeoForge
-	//runtimeOnly("mezz.jei:jei-1.21-neoforge:${jei_version}")
+	compileOnly("mezz.jei:jei-1.21.1-common-api:${jei_version}")
+	compileOnly("mezz.jei:jei-1.21.1-neoforge-api:${jei_version}")
+	runtimeOnly("mezz.jei:jei-1.21.1-neoforge:${jei_version}")
 
 	compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
-	runtimeOnly "dev.emi:emi-neoforge:${emi_version}"
+	//runtimeOnly "dev.emi:emi-neoforge:${emi_version}"
 
 	implementation "curse.maven:jade-324717:${project.jade_version}"
     implementation "curse.maven:better-advancements-272515:${project.better_advancements_version}"
