--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ minecraft_version=1.21.1
 neo_version=21.1.80
 
 # Deps
+emi_version=1.1.18+1.21.1
 jei_version=19.21.0.247
 jade_version=5884231
 better_advancements_version=5850587
